package demo.ht.com.design_pattern.factory_mode.abstract_factory;

/**
 * @ClassName IComputer
 * 作者: szj
 * 时间: 2021/1/7 11:06
 * CSDN:https://blog.csdn.net/weixin_44819566
 * 公众号:码上变有钱
 *
 * 电脑实现类
*/
public interface IComputer {
    /**
     * 学习
     */
    void study();

    /**
     * 玩耍
     */
    void play();

    /**
     * 看电视
     */
    void WatchTv();
}
